fixing the way we use to inject our audit implementation

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -479,7 +479,7 @@ env.Library(
         "audit.cpp",
     ],
     LIBDEPS=[
-    ],
+    ] + (['audit/audit'] if has_option('audit') else []),
 )
 
 env.Library(
