--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -255,7 +255,9 @@ env.Library('topology_coordinator_impl',
                 'topology_coordinator_impl.cpp',
             ],
             LIBDEPS=[
-                '$BUILD_DIR/mongo/db/audit',
+                # Audit is not used here so we comment it out
+                # until it will be necessary
+                #'$BUILD_DIR/mongo/db/audit',
                 'replication_executor',
                 'replica_set_messages',
                 'repl_settings',
